# FeatureDetection

./: CMakeLists.txt  README.md
include/: detectionMethod.hpp  imageStyle.hpp  matchingMethod.hpp  method.h  miniFunction.hpp  videoMatching.hpp
src/: detectionMethod.cpp  imageStyle.cpp  main.cpp  matchingMethod.cpp  miniFunction.cpp  videoMatching.cpp
